--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    androidTestImplementation 'androidx.test:rules:1.1.1'
     androidTestImplementation 'com.jayway.android.robotium:robotium-solo:5.3.1'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
